--- a/src/navbar/navbar.module.css
+++ b/src/navbar/navbar.module.css
@@ -4,7 +4,11 @@
 }
 .navbar {
   height: 100px;
+  width: 100vw;
   background-color: white;
+  position: fixed;
+  z-index: 1;
+  box-shadow: 0px 10px 60px rgb(206, 206, 206);
   
 }
 .navItem{
