--- a/src/shoppingCart/shoppingCart.module.css
+++ b/src/shoppingCart/shoppingCart.module.css
@@ -5,6 +5,7 @@
 }
 body {
   overflow-x: hidden;
+  height: 2400px;
 }
 
 .tanitim {
@@ -41,347 +42,235 @@ body {
   left: 1500px;
 }
 
-.bigimg {
+.table {
   position: relative;
-  top: 410px;
+  top: 500px;
   left: 400px;
 }
-.smallimages {
+th {
+  color: #797979;
   width: 200px;
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  top: 320px;
-  left: 750px;
-}
-.bilgiler {
-  position: relative;
-  top: -200px;
-  left: 1100px;
-  width: 500px;
-}
-.bilgilerTitle {
   font-family: sans-serif;
-  font-weight: 500;
-  font-size: 24px;
-  color: #2a2a2a;
+  border-bottom: 1px solid #797979;
+  padding-bottom: 20px;
+}
+td {
+  text-align: center;
+  margin: 10px 0px;
 }
 
-.bilgilerPrice {
-  font-family: sans-serif;
-  color: rgb(113, 205, 20);
-  font-size: 30px;
-  position: relative;
-  top: 30px;
+.product {
+  text-align: left;
+  padding-right: 80px;
+  width: 550px;
 }
-.bilgilerCategory {
+.img {
   position: relative;
-  top: 70px;
-  font-family: sans-serif;
-  color: #2a2a2a;
-}
-.bilgilerTheCategory {
-  position: relative;
-  top: 70px;
-  left: 20px;
-  font-family: sans-serif;
-  color: rgb(113, 205, 20);
+  top: 40px;
+  left: -80px;
+  border: #c9c8c8 solid 1px;
+  margin-top: 50px;
 }
 
-.bilgilerAvailibility {
-  position: relative;
-  top: 120px;
+.span {
+  color: #797979;
   font-family: sans-serif;
-  color: #2a2a2a;
-  left: -150px;
-}
-.bilgilerTheAvailibility {
   position: relative;
-  top: 120px;
-  font-family: sans-serif;
-  color: #2a2a2a;
-  left: -120px;
+  left: -60px;
+  margin-top: 50px;
 }
-.bilgilerCizgi {
-  position: relative;
-  top: 150px;
-}
-.bilgilerText {
+
+.price {
+  font-size: 25px;
   font-family: sans-serif;
   color: #797979;
   position: relative;
-  top: 180px;
-  line-height: 25px;
+  top: 40px;
+  margin-top: 50px;
 }
 
-.Quantity {
+.inpum {
+  width: 150px;
+  height: 50px;
+  border: #c9c8c8 solid 1px;
   position: relative;
-  top: 220px;
-  font-family: sans-serif;
-  color: #797979;
+  top: 35px;
+  margin-top: 50px;
 }
 
-.QuantityInp {
+.cizgi1 {
+  width: 1236px;
+  height: 1px;
+  background-color: #797979;
   position: relative;
-  position: relative;
-  top: 220px;
-  left: 10px;
-  border: #969595 solid 1px;
-  width: 100px;
-  height: 20px;
-  padding-left: 10px;
+  top: 570px;
+  left: 340px;
 }
 
-.bilgilerBtn {
+.cizgi2 {
+  width: 1236px;
+  height: 1px;
+  background-color: #797979;
+  position: relative;
+  top: 630px;
+  left: 340px;
+}
+
+.updateBtn {
   width: 150px;
   height: 40px;
   border: none;
-  color: white;
-  background-color: rgb(113, 205, 20);
-  border-radius: 8px;
-  position: relative;
-  top: 280px;
-  left: -180px;
-}
-
-.bilgilerICon1div {
-  width: 50px;
-  height: 40px;
-  position: relative;
-  top: 280px;
-  left: -130px;
-  background-color: #f6f6f6;
-  border: none;
-  transition: all 0.3s linear;
-}
-
-.bilgilerICon1div:hover {
-  background-color: white;
-  box-shadow: -10px 20px 40px black;
-}
-.bilgilerIcon1 {
-  font-size: 20px;
-}
-
-.bilgilerICon2div {
-  width: 50px;
-  height: 40px;
-  position: relative;
-  top: 280px;
-  left: -110px;
-  background-color: #f6f6f6;
-  border: none;
-  transition: all 0.3s linear;
-}
-
-.bilgilerICon2div:hover {
-  background-color: white;
-  box-shadow: -10px 20px 40px black;
-}
-.bilgilerIcon2 {
-  font-size: 20px;
-}
-
-.yorumSerit {
-  height: 60px;
-  width: 1200px;
-  background-color: #f6f6f6;
-  position: relative;
-  top: 250px;
-  left: 400px;
-}
-
-.yorumSeritBolumleri {
-  position: relative;
-  top: 10px;
-  left: 350px;
-  width: 600px;
-  display: flex;
-  justify-content: space-between;
-}
-.yorumSeritBtn {
-  width: 130px;
-  height: 40px;
-  border: none;
-  background-color: white;
-}
-
-.yorumSeritBtnSecili {
-  width: 130px;
-  height: 40px;
-  border: none;
-  background-color: rgb(113, 205, 20);
-  color: white;
-}
-
-.yorumBolumu {
-  height: 1080px;
-  width: 1197px;
-  position: relative;
-  left: 399px;
-  top: 240px;
-  border: #f6f6f6 2px solid;
-}
-
-.overall {
-  height: 181px;
-  width: 270px;
-  background-color: #f6f6f6;
-  position: relative;
-  top: 40px;
-  left: 40px;
-}
-
-.overalltitle {
-  font-family: sans-serif;
-  font-size: 22px;
-  font-weight: 500;
-  position: relative;
-  top: 30px;
-  left: 100px;
-}
-
-.Evaluate {
-  font-size: 50px;
-  color: rgb(113, 205, 20);
-  position: relative;
-  top: 40px;
-  left: 95px;
-  font-family: sans-serif;
-}
-
-.reviewsnumber {
-  color: #797979;
-  font-family: sans-serif;
-  position: relative;
-  top: 50px;
-  left: 90px;
-}
-
-.reviewsTitle {
-  position: relative;
-  left: 350px;
-  top: -130px;
-  font-family: sans-serif;
-}
-.fivestar {
-  position: relative;
-  top: -120px;
-  left: 350px;
-  margin-top: 10px;
-}
-
-.fivestartitle {
-  display: inline;
-  margin-right: 10px;
-  color: #797979;
-  font-family: sans-serif;
-}
-.fivestarstars {
-  color: #fbd600;
-}
-.fivestartext {
-  font-family: sans-serif;
-  display: inline;
-  margin-left: 10px;
-  color: #797979;
-}
-
-.addreview {
-  height: 340px;
-  width: 510px;
-  position: relative;
-  left: 650px;
-  top: -300px;
-}
-
-.addreviewTitle {
-  font-size: 30px;
-  font-family: sans-serif;
-  font-weight: 100;
-}
-.yourRaiting {
-  position: relative;
-  top: 20px;
-}
-
-.firstInp {
-  position: relative;
-  top: 45px;
-  width: 490px;
-  height: 30px;
-  border: 1px solid #ced4da;
   border-radius: 5px;
-  font-size: 17px;
-  padding-left: 20px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-top: 15px;
+  font-size: 1rem;
+  position: relative;
+  top: 600px;
+  left: 340px;
+}
+.couponInp {
+  width: 200px;
+  height: 40px;
+  border: #f6f6f6 1px solid;
+  padding-left: 10px;
+  position: relative;
+  top: 600px;
+  left: 850px;
 }
 
-.firsttextarea {
+.applyBtn {
+  width: 120px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
   position: relative;
-  top: 45px;
-  width: 490px;
+  top: 600px;
+  left: 850px;
+  background-color: rgb(113, 205, 20);
+  color: white;
+}
+
+.closeBtn {
+  width: 150px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  position: relative;
+  top: 600px;
+  left: 850px;
+}
+
+.subtotalTitle {
+  font-size: 1.2rem;
+  position: relative;
+  top: 660px;
+  left: 1240px;
+  font-family: sans-serif;
+}
+
+.subtotal {
+  font-size: 1.2rem;
+  position: relative;
+  top: 640px;
+  left: 1440px;
+  font-family: sans-serif;
+}
+
+.cizgi3 {
+  width: 1236px;
+  height: 1px;
+  background-color: #797979;
+  position: relative;
+  top: 670px;
+  left: 340px;
+}
+
+.shippingTitle {
+  font-size: 1.2rem;
+  position: relative;
+  top: 700px;
+  left: 1240px;
+  font-family: sans-serif;
+}
+
+.firstradio {
+  color: #797979;
+  font-family: sans-serif;
+  position: relative;
+  top: 680px;
+  left: 1400px;
+  margin-bottom: 20px;
+}
+
+.calculate {
+  font-family: sans-serif;
+  position: relative;
+  top: 700px;
+  left: 1400px;
+}
+
+.country {
+  width: 320px;
   height: 50px;
-  border: 1px solid #ced4da;
-  border-radius: 5px;
-  font-size: 17px;
-  font-family: sans-serif;
-  padding-left: 20px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-top: 15px;
+  font-size: 1rem;
+  border: none;
+  background-color: #f6f6f6;
+  position: relative;
+  top: 720px;
+  left: 1240px;
+  border-radius: 10px;
+  padding-left: 10px;
+  margin-bottom: 15px;
+  display: block;
+  color: #797979;
 }
 
-.addreviewBtn {
-  width: 140px;
+.updateDetailsBtn {
+  width: 150px;
   height: 40px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  position: relative;
+  top: 720px;
+  left: 1400px;
+}
+
+.cizgi4 {
+  width: 1236px;
+  height: 1px;
+  background-color: #797979;
+  position: relative;
+  top: 740px;
+  left: 340px;
+}
+
+.contiue {
+  width: 250px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  position: relative;
+  top: 760px;
+  left: 1000px;
+}
+.checkout {
+  width: 250px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  position: relative;
+  top: 760px;
+  left: 1000px;
   background-color: rgb(113, 205, 20);
   color: white;
-  font-family: sans-serif;
-  border: none;
-  position: relative;
-  top: 60px;
-  left: 370px;
-}
-
-.ilkkisi {
-  position: relative;
-  top: -400px;
-  left: 50px;
-  margin-top: 50px;
-}
-.birincikisiIsim {
-  display: inline;
-  position: relative;
-  top: -50px;
-  left: 30px;
-  font-family: sans-serif;
-  font-size: 17px;
-}
-
-.Birincikisistars {
-  color: #fbd600;
-  position: relative;
-  top: -25px;
-  left: -60px;
-  letter-spacing: 7px;
-}
-
-.birincikisiYorum {
-  color: #797979;
-  width: 550px;
-  font-family: sans-serif;
-  font-size: 17px;
-  position: relative;
-  top: 20px;
-  line-height: 25px;
 }
 
 .footer {
   position: relative;
-  top: 300px;
+  top: 900px;
   height: 542px;
   background-color: #0d0d1f;
 }
